# technopark-highload-web-server

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.c
include/: http.h  pthreads.h  receiver.h  sender.h  task.h
src/: pthreads.c  receiver.c  sender.c  task.c
